--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "build": "webpack -w"
+    "build": "webpack -w",
+    "seed": "node seed.js"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.2",
+    "sweetalert2": "^9.6.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
