--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start_node": "nodemon index.js",
     "build": "webpack -w",
     "seed": "node seed.js",
-    "start": "node server.js",
-    "startDev": "nodemon server.js"
+    "startDev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +23,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "pg": "^8.3.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
