--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack -w",
     "seed": "node seed.js",
-    "start": "node index.js",
-    "build": "ng build",
-    "heroku-postbuild": "cd client && yarn && yarn run build"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +22,6 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "pg": "^8.3.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
