--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack -w",
-    "start": "node index.js"
+    "start": "node index.js",
+    "startDev": "nodemon server.js",
+    "heroku-prebuild": "npm install",
+    "heroku-postbuild":  "npm install && npm run build"
+
   },
   "keywords": [],
   "author": "",
