--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
+  },
+  "performance": {
+    "maxAssetSize": 100000,
+    "maxEntrypointSize": 100000,
+    "hints": "warning"
   }
 }
