--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.1",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "react": "^16.12.0",
@@ -38,7 +39,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
-  }, "engines": {
+  },
+  "engines": {
     "node": "14.9.0"
   }
 }
