--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
+    "dotenv-webpack": "^2.0.0",
     "nodemon": "^2.0.2"
   },
   "engines": {
