--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -w --mode production",
+    "build": "webpack --mode production",
     "webpack": "webpack -w --mode development",
     "start": "node server.js",
     "startDev": "nodemon server.js",
