--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "webpack --mode production ",
     "webpack": "webpack -w --mode development",
     "start": "node server.js",
-    "startDev": "nodemon server.js",
-    "heroku-postbuild": "node seed.js"
+    "startDev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
